# OnewordAI

./: .gitignore  ARM_SETUP.md  CLI.md  Dockerfile  MANIFEST.in  OneWord_Colab.ipynb  README.md  app_gradio.py  cli.py  license.txt  main.py  oneword-ai-colab.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt
onewordai/: __init__.py  cli.py
onewordai/api/: main.py
onewordai/arm/: __init__.py  setup.sh  web.py
onewordai/core/: __init__.py  engine.py  engine_cpp.py
onewordai/web/: app.js  index.html  style.css
src/: cli.py
src/api/: main.py
src/core/: __init__.py  engine.py
src/web/: app.js  index.html
