[project]
name = "oneword-ai"
version = "0.2.1"
description = "Create viral-style one-word subtitles for Reels, Shorts & TikToks using AI. Perfect for content creators!"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "license.txt"}
authors = [
  {name = "Ambrish", email = "ambrishyadav1110@gmail.com"},
]
keywords = ["subtitles", "ai", "whisper", "content-creation", "video-editing"]
dependencies = [
    "openai-whisper>=20231117",
    "torch>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "ffmpeg-python>=0.2.0",
    "gradio>=4.0.0",
    "tqdm>=4.65.0",
    "aiofiles>=23.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "huggingface_hub>=0.16.0",
    "flask>=2.0.0" 
]

[project.urls]
"Homepage" = "https://github.com/Ambrishyadav-byte/OnewordAI"
"Bug Tracker" = "https://github.com/Ambrishyadav-byte/OnewordAI/issues"

[project.scripts]
oneword-web = "onewordai.api.main:start_server"
oneword-cli = "onewordai.cli:main"
onewordai-setup-arm = "onewordai.cli:setup_arm"
onewordai-process-arm = "onewordai.cli:process_arm"
onewordai-web-arm = "onewordai.cli:web_arm"
